tests/cases/syntax/error/instance/no-literal-passed-to-inst.soccam
;; no-literal-passed-to-inst.soccam
;; Tests: 
(module no-literal-passed-to-inst soccam
  (proc foo ([x int])
    (skip))
  
  (proc main ()
    (foo 3))
)
